--- a/app/static/admin/pages/pages_example.html
+++ b/app/static/admin/pages/pages_example.html
@@ -62,7 +62,7 @@ desired effect
         <!-- Logo -->
         <a href="../index.html" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>A</b>LT</span>
+            <span class="logo-mini"><b>R</b>TV</span>
             <!-- logo for regular state and mobile devices -->
             <span class="logo-lg"><b>Raspi</b>TV</span>
         </a>
@@ -142,7 +142,7 @@ desired effect
                 </li>
                 <!-- Page information -->
                 <li>
-                    <a href="changes.html">
+                    <a href="page_settings.html">
                         <i class="fa fa-edit"></i> <span>Page information</span>
                     </a>
                 </li>
@@ -191,7 +191,7 @@ desired effect
                 <small>Optional description</small>
             </h1>
             <ol class="breadcrumb">
-                <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                <li><a href="../index.html"><i class="fa fa-dashboard"></i> Home</a></li>
                 <li class="active">Dashboard</li>
             </ol>
         </section>
