--- a/app/static/admin/index.html
+++ b/app/static/admin/index.html
@@ -62,7 +62,7 @@ desired effect
         <!-- Logo -->
         <a href="index.html" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>A</b>LT</span>
+            <span class="logo-mini"><b>R</b>TV</span>
             <!-- logo for regular state and mobile devices -->
             <span class="logo-lg"><b>Raspi</b>TV</span>
         </a>
@@ -142,7 +142,7 @@ desired effect
                 </li>
                 <!-- Page information -->
                 <li>
-                    <a href="pages/changes.html">
+                    <a href="pages/page_settings.html">
                         <i class="fa fa-edit"></i> <span>Page information</span>
                     </a>
                 </li>
