--- a/app/static/admin/pages/accounts.html
+++ b/app/static/admin/pages/accounts.html
@@ -7,7 +7,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Raspi-TV | Dashboard</title>
+    <title>Raspi-TV | Accounts</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.5 -->
@@ -62,7 +62,7 @@ desired effect
         <!-- Logo -->
         <a href="../index.html" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>A</b>LT</span>
+            <span class="logo-mini"><b>R</b>TV</span>
             <!-- logo for regular state and mobile devices -->
             <span class="logo-lg"><b>Raspi</b>TV</span>
         </a>
@@ -142,7 +142,7 @@ desired effect
                 </li>
                 <!-- Page information -->
                 <li>
-                    <a href="changes.html">
+                    <a href="page_settings.html">
                         <i class="fa fa-edit"></i> <span>Page information</span>
                     </a>
                 </li>
