--- a/app/static/public/index.html
+++ b/app/static/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Raspi-T.v2</title>
     <meta name="description" content="description">
-    <meta name="author" content="DevOOPS">
+    <meta name="author" content="Raspi-TV">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="plugins/bootstrap/bootstrap.css" rel="stylesheet">
     <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -55,10 +55,7 @@
         <div id="content" class="col-xs-12 col-sm-10">
             <!--Start Dashboard Tab-->
             <div id="raspi-frame">
-
                 <iframe id="content_frame" frameborder="0" scrolling="no"></iframe>
-                <!--<p>Could this space house the old frame?<br>Give ideas.</p>
-                <img src="img/8962691008_7f489395c9_m.jpg" alt="some_text">-->
             </div>
             <!--End Dashboard Tab-->
             <!--Start Breadcrumb-->
