added twitter's symbol

--- a/app/static/public/index.html
+++ b/app/static/public/index.html
@@ -62,7 +62,7 @@
             <div id="footer" class="row">
                 <div id="breadcrumb" class="col-xs-12">
                     <ol class="breadcrumb pull-left">
-                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i> Twitter</a></li>
                         <!--<span id="tweets-table">
 
 					</span>-->
