missing accounts.js

--- a/app/static/admin/pages/accounts.html
+++ b/app/static/admin/pages/accounts.html
@@ -276,5 +276,6 @@ desired effect
 <script src="../dist/js/app.min.js"></script>
 <!-- Specific functions for Raspi-TV -->
 <script src="../js/raspi-tv.js"></script>
+<script src="../js/accounts.js"></script>
 </body>
 </html>
