allowing change in twitter's query

--- a/app/static/admin/pages/page_settings.html
+++ b/app/static/admin/pages/page_settings.html
@@ -230,11 +230,11 @@ desired effect
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th>Weather Location</th>
+                                    <th>Twitter Query</th>
                                     <td>
                                         <div class="input-group">
                                             <input type="text" size="80" class="form-control"
-                                                   aria-describedby="basic-addon1" id="weatherR">
+                                                   aria-describedby="basic-addon1" id="twitter_query">
                                         </div>
                                     </td>
                                 </tr>
