Added cantina meals to front-end.

--- a/app/static/public/index.html
+++ b/app/static/public/index.html
@@ -88,17 +88,11 @@
                 <!--Edited original bootstrap.css because of these. Line 3133-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle">
-                        <i class="fa fa-bar-chart-o"></i>
-                        <span class="hidden-xs">Meals/weather here</span>
+                        <i class="fa fa-cutlery"></i>
+                        <span class="hidden-xs">Meals</span>
                     </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="ajax-link" href="">Long item with meals' info</a></li>
-                        <li><a class="ajax-link" href="">Other item example 1</a></li>
-                        <li><a class="ajax-link" href="">Other item example 2</a></li>
-                        <li><a class="ajax-link" href="">Other item example 3</a></li>
-                        <li><a class="ajax-link" href="">Other item example 4</a></li>
-                        <li><a class="ajax-link" href="">Other item example 5</a></li>
-                        <li><a class="ajax-link" href="">Other item example 6</a></li>
+                    <ul class="dropdown-menu" id="meals-container">
+                        <!--Meals here-->
                     </ul>
                 </li>
                 <li class="dropdown">
