--- a/app/static/admin/index.html
+++ b/app/static/admin/index.html
@@ -199,6 +199,13 @@ desired effect
         <!-- Main content -->
         <section class="content">
             <!-- Your Page Content Here -->
+            <div class="callout callout-info lead">
+                <h4>Reminder!</h4>
+                <p>
+                    In order for changes made here in the administration zone to take effect you need to <b>reload the
+                    main page</b> by <b>clicking the button above</b>, near your user.
+                </p>
+            </div>
             Something should definitely go in here...
         </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
