added reload button

--- a/app/static/admin/pages/order-dropbox-files.html
+++ b/app/static/admin/pages/order-dropbox-files.html
@@ -104,6 +104,10 @@ desired effect
                             </li>
                         </ul>
                     </li>
+                    <!-- Reload Button -->
+                    <li>
+                        <a href="/admin/reload" title="Click this if you want to reload the main page!"><i class="fa fa-refresh"></i></a>
+                    </li>
                 </ul>
             </div>
         </nav>
