--- a/app/static/public/index.html
+++ b/app/static/public/index.html
@@ -78,24 +78,16 @@
         <!--End Content-->
         <!--Start Sidebar-->
         <div id="sidebar-left" class="col-xs-2 col-sm-2">
-            <ul class="nav main-menu">
+            <ul id="meals-container" class="nav main-menu">
                 <li>
                     <a href="#" class="ajax-link">
-                        <i class="fa fa-dashboard"></i>
-                        <span class="hidden-xs">Dashboard</span>
+                        <i class="fa fa-cutlery"></i>
+                        <span class="hidden-xs">Refeições</span>
                     </a>
                 </li>
                 <!--Edited original bootstrap.css because of these. Line 3133-->
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle">
-                        <i class="fa fa-cutlery"></i>
-                        <span class="hidden-xs">Meals</span>
-                    </a>
-                    <ul class="dropdown-menu" id="meals-container">
-                        <!--Meals here-->
-                    </ul>
-                </li>
-                <li class="dropdown">
+                <!-- Example table entry bellow -->
+                <!--<li class="dropdown">
                     <a href="#" class="dropdown-toggle">
                         <i class="fa fa-table"></i>
                         <span class="hidden-xs">Tables</span>
@@ -105,7 +97,7 @@
                         <li><a class="ajax-link" href="">Data Tables</a></li>
                         <li><a class="ajax-link" href="">Beauty Tables</a></li>
                     </ul>
-                </li>
+                </li>-->
             </ul>
         </div>
         <!--End Sidebar-->
