fixing problems related to jquery-ui

--- a/app/static/admin/pages/order-front-end.html
+++ b/app/static/admin/pages/order-front-end.html
@@ -106,7 +106,7 @@ desired effect
                     </li>
                     <!-- Reload Button -->
                     <li>
-                        <a id="reload-btn" href="/admin/reload" title="Click this if you want to reload the main page!"><i class="fa fa-refresh"></i></a>
+                        <a id="reload-btn" href="/admin/reload"><i class="fa fa-refresh"></i><span style="display: none">Click this if you want to reload the main page!</span></a>
                     </li>
                 </ul>
             </div>
