--- a/app/static/admin/pages/order-dropbox-files.html
+++ b/app/static/admin/pages/order-dropbox-files.html
@@ -106,7 +106,7 @@ desired effect
                     </li>
                     <!-- Reload Button -->
                     <li>
-                        <a href="/admin/reload" title="Click this if you want to reload the main page!"><i class="fa fa-refresh"></i></a>
+                        <a href="/admin/reload"><i class="fa fa-refresh"></i><span style="display: none">Click this if you want to reload the main page!</span></a>
                     </li>
                 </ul>
             </div>
