--- a/app/static/admin/index.html
+++ b/app/static/admin/index.html
@@ -210,7 +210,7 @@ desired effect
                     main page</b> by <b>clicking the button above</b>, near your user.
                 </p>
             </div>
-            <img class="img-responsive center-block" src="imgs/raspi.png">
+            <img class="img-responsive center-block" src="img/raspi.png">
         </section><!-- /.content -->
     </div><!-- /.content-wrapper -->
 
