--- a/app/static/admin/index.html
+++ b/app/static/admin/index.html
@@ -191,8 +191,8 @@ desired effect
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
-                Page Header
-                <small>Optional description</small>
+                Welcome 
+                <small>Change all you need from here</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
