Added editable twitter message to both admin and public pages.

--- a/app/static/admin/pages/page_settings.html
+++ b/app/static/admin/pages/page_settings.html
@@ -243,6 +243,15 @@ desired effect
                                     </td>
                                 </tr>
                                 <tr>
+                                    <th>Twitter Message</th>
+                                    <td>
+                                        <div class="input-group ">
+                                            <input type="text" size="80" class="form-control"
+                                                   aria-describedby="basic-addon1" id="twitter_message">
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
                                     <th>Feed Source</th>
                                     <td>
                                         <div class="input-group">
