Fixed twitter message

--- a/app/static/admin/pages/register-dropbox.html
+++ b/app/static/admin/pages/register-dropbox.html
@@ -42,7 +42,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
                 <input id="pincode" type="text" name="pincode" class="form-control" placeholder="Pin Code"/>
             </div>
             <div class="form-group">
-                <input id="note" type="text" name="note" class="form-control" placeholder="Note"/>
+                <input id="note" type="text" name="note" class="form-control" placeholder="Note (optional)"/>
             </div>
         </div>
         <div class="footer send" style="display: none">
