color scheme fix

--- a/app/static/public/index.html
+++ b/app/static/public/index.html
@@ -62,6 +62,7 @@
             <div id="footer" class="row">
                 <div id="breadcrumb" class="col-xs-12">
                     <ol class="breadcrumb pull-left">
+                        <!--Edited original bootstrap.css because of this. Line 4304-->
                         <li><a href="#"><i class="fa fa-twitter"></i> <span id="twitter_query">Twitter</span></a></li>
                         <li><a id="tweet" href="#">Tweet</a></li>
                     </ol>
